--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -61,7 +61,7 @@
     {% block content %}
     {% endblock %}
     <a href=" https://wa.me/+916238700558?text=Hello,%20I%20am%20interested%20in%20learning%20more%20about%20the%20products%20available%20on%20your%20website.%20Could%20you%20please%20provide%20more%20details%20about%20your%20products?%20Thank you!" target="_blank">
-        <img src="{% static 'images/whatsapp1.png' %}" alt="whatsapp"  width="70px" class="whatsapplogo">
+        <img src="{% static '/images/whatsapp1.png' %}" alt="whatsapp"  width="70px" class="whatsapplogo">
     </a>
 
 </body>
